{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "e8ffe500-aca7-4ae9-92ef-539572b9b289",
            "actions": [
                {
                    "name": "MovementAction",
                    "type": "PassThrough",
                    "id": "a57730c8-adc5-416c-b906-8b76ce11932d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "3864c54f-c2ef-4205-9a14-ecf4b59d5fd1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "55f292bb-a27f-4325-aa0c-6679ff8c4537",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "36d469a4-4d1f-406f-884a-ea8a22cff2dd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "618af6e9-dd80-43bd-81f9-d159e07abaca",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "920aa869-8f58-40f3-b256-362401c36685",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4a6aa5ff-27d4-4a3c-8dc3-f0d08f09427c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ad15a613-60f5-4b91-8a92-61f3debc24ee",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "45b13731-8226-4f90-aadf-ccca8f9a5513",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "14c0c96b-0f3d-433b-9483-08d3feab5c87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f537277-b2cf-42f4-91a1-096be5f48aa5",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}